--- a/la-casa.njk
+++ b/la-casa.njk
@@ -6,7 +6,7 @@ permalink: "/la-casa/"
 ---
 
 <!-- Hero de página (más bajito que el home) -->
-<section class="page-hero full-bleed noimg tierra sm center-mobile">
+<section class="page-hero full-bleed noimg tierra auto center-mobile">
   <div class="overlay" aria-hidden="true"></div>
   <div class="inner container">
     <h1 class="font-primary" style="color:#fff;margin:0">La Casa</h1>
